* disabled apple-touch-startup-image, as this does not function until iOS 11
* added splash screen and removed "This may take a few seconds..." message on upgrade
* changed "Save as link" dialog link to textbox and added copy to clipboard button to improve copying
* overhauled menu structure and layout, including addition of special mobile device menus and icons
* moved "Mobile version" selection to Settings -> Phone version
* improved Sequence info layout
* increased Form A size on small mobile devices
* removed Mini Form A on small mobile devices
* fixed fileName display in Sequence info
* expanded Free Unknown designer to also support Free Knowns
* addFormElements was changed to fix small sequence on mobile scaling
* fixed issue where selecting a figure could lead to (0,0) move line
* fixed Grid View Aresti numbers and K becoming too small on smallMobile view
* maximized Grid columns to 5 for smallMobile
* removed Figures/Queue button and improved logic and layout for Figure Selector
* removed "* Figure Queue" from figure selector in Free (Un)known designer
* updated sequence string field behaviour including better highlighting
* updated manuals and integrated in main window for mobile devices
* changed OpenAero file structure to improve clarity and Cordova compatibility
* added 2018 CIVA Free Known figure sets
* updated figures according 2018 Aresti Catalogue
* fixed issue where trying to open a file that is not a sequence would change the displayed file name
* added automatic switching to French when detecting French language on first install
* added pilot_id and flight_nb fields for automatic insertion of pilot ID and Flight Nr by organisers
* moved check log to dialog window as external window is giving problems in new Chrome
* changed Undo for Clear Positioning and Separte Figures to work in a single step
* fixed bug that caused Separate Figures dialogue not to shown and improved text
* small changes to Aresti System help page