@@ -518,7 +518,7 @@
                 <select id="language"></select><i class="bar"></i>
               </span>
             </div>
-            <div class="content divider">
+            <div id="smallMobileSetting" class="content divider">
               <label>
                 <span class="userText" id="t_smallMobile"></span>
                 <input type="checkbox" id="smallMobile" class="material-switch-input">
